--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,47 +1,47 @@
 server:
-    port: 9090
+  port: 9090
 
 spring:
-    datasource:
-        url: jdbc:mysql://120.77.203.216/gyt?useUnicode=true&characterEncoding=gbk&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
-#        url: jdbc:mysql://localhost/test3?useUnicode=true&characterEncoding=gbk&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        username: root
-        password: 123456
+  datasource:
+    url: jdbc:mysql://120.77.203.216/gyt?useUnicode=true&characterEncoding=gbk&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+    #        url: jdbc:mysql://localhost/test3?useUnicode=true&characterEncoding=gbk&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 123456
 
 
-    thymeleaf:
-        mode: LEGACYHTML5
-# È¡ÏûÄ£°åÎÄ¼þ»º´æ
-        cache: false
+  thymeleaf:
+    mode: LEGACYHTML5
+    # È¡ï¿½ï¿½Ä£ï¿½ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½ï¿½ï¿½
+    cache: false
 
-#    #Éè¶¨thymeleafÎÄ¼þÂ·¾¶ Ä¬ÈÏÎªsrc/main/resources/templates
-#    freemarker:
-#        template-loader-path: classpath:/templates
+  #    #ï¿½è¶¨thymeleafï¿½Ä¼ï¿½Â·ï¿½ï¿½ Ä¬ï¿½ï¿½Îªsrc/main/resources/templates
+  #    freemarker:
+  #        template-loader-path: classpath:/templates
 
-#    #Éè¶¨¾²Ì¬ÎÄ¼þÂ·¾¶£¬js,cssµÈ
-#    mvc:
-#        static-path-pattern: /static/**
+  #    #ï¿½è¶¨ï¿½ï¿½Ì¬ï¿½Ä¼ï¿½Â·ï¿½ï¿½ï¿½ï¿½js,cssï¿½ï¿½
+  #    mvc:
+  #        static-path-pattern: /static/**
 
-    servlet:
-        multipart:
-        # ÉèÖÃµ¥¸öÎÄ¼þ´óÐ¡
-            max-file-size: 200MB
-        # ÉèÖÃµ¥´ÎÇëÇóÎÄ¼þµÄ×Ü´óÐ¡
-            max-request-size: 200MB
+  servlet:
+    multipart:
+      # ï¿½ï¿½ï¿½Ãµï¿½ï¿½ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½Ð¡
+      max-file-size: 200MB
+      # ï¿½ï¿½ï¿½Ãµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½ï¿½Ü´ï¿½Ð¡
+      max-request-size: 200MB
 
 #mybatis-plus:
 mybatis:
-    type-aliases-package: com.example.demo.bean
-#    mapper-locations: classpath*:/mapper/*Mapper.xml
-    mapper-locations: classpath*:/mapper/*.xml
-#    configuration:
-        # ÊÇ·ñ¿ªÆô×Ô¶¯ÍÕ·åÃüÃû¹æÔòÓ³Éä:´ÓÊý¾Ý¿âÁÐÃûµ½JavaÊôÐÔÍÕ·åÃüÃûµÄÀàËÆÓ³Éä
+  type-aliases-package: com.example.demo.bean
+  #    mapper-locations: classpath*:/mapper/*Mapper.xml
+  mapper-locations: classpath*:/mapper/*.xml
+    #    configuration:
+  # ï¿½Ç·ï¿½ï¿½ï¿½ï¿½Ô¶ï¿½ï¿½Õ·ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ó³ï¿½ï¿½:ï¿½ï¿½ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Javaï¿½ï¿½ï¿½ï¿½ï¿½Õ·ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ó³ï¿½ï¿½
 #        map-underscore-to-camel-case: true
 
 #showSql
 logging:
-    level:
-        com:
-            example:
-                mapper: debug
+  level:
+    com:
+      example:
+        mapper: debug
